--- a/todo
+++ b/todo
@@ -1,14 +1,14 @@
 
 TODOs 20220318: 
- ✔ reflect file change and test @done(22-03-18 22:01)
- ✔ information panel @done(22-03-18 15:44)
- ✔ minimize, maximize code block and readme @done(22-03-18 16:24)
- ✔ add logic name in url param @done(22-03-18 19:06)
- ✔ add test output to ui @done(22-03-18 15:19)
- ✔ upper sort logic name @done(22-03-18 15:06)
- ✔ examples default values @done(22-03-18 23:12)
- ✔ yarn build @done(22-03-19 00:24)
- ✔ create package and test package (manifest.in templete) @done(22-03-19 11:37)
+    ✔ reflect file change and test @done(22-03-18 22:01)
+    ✔ information panel @done(22-03-18 15:44)
+    ✔ minimize, maximize code block and readme @done(22-03-18 16:24)
+    ✔ add logic name in url param @done(22-03-18 19:06)
+    ✔ add test output to ui @done(22-03-18 15:19)
+    ✔ upper sort logic name @done(22-03-18 15:06)
+    ✔ examples default values @done(22-03-18 23:12)
+    ✔ yarn build @done(22-03-19 00:24)
+    ✔ create package and test package (manifest.in templete) @done(22-03-19 11:37)
 
 # beta release v0.1.0
 TODOs 20220319:
@@ -19,7 +19,11 @@ TODOs 20220319:
     ✔ upgrade loading ui @done(22-03-19 16:35)
     ✔ get data during 1 sec @done(22-03-19 16:35)
     ☐ test on own project
-    ☐ beta release v0.1.0 and publish documentation
+    ✔ beta release v0.1.0 and publish documentation @done(22-03-20 08:24)
 
 TODOs:
     ☐ auto create logic argument description
+    ☐ enable select port --port=xxxx
+    ☐ move logics directory to src/logics
+    ☐ modify terminal logs
+    ☐ change title ReactApp to Logicbook
