--- a/todo
+++ b/todo
@@ -46,6 +46,11 @@ TODOs:
     ✔ _create_job_args() missing 1 required positional argument: 'self' in execute [hotfix] @done(22-03-21 12:39)
     ✔ add title in logic and show title accordion in ui @done(22-03-21 12:03)
 
+# 0.1.3
+TODOs: 
+    ☐ error when self in function at manager.py #170 [hotfix]
+    TypeError: __init__() missing 2 required positional arguments: 'a' and 'b'
+
 # 0.2.0
 TODOs:
     ☐ auto create logic argument description
