--- a/todo
+++ b/todo
@@ -48,7 +48,7 @@ TODOs:
 
 # 0.1.3
 TODOs: 
-    ☐ error when self in function at manager.py #170 [hotfix]
+    ✔ error when self in function at manager.py #170 [hotfix] @done(22-03-21 17:40)
     TypeError: __init__() missing 2 required positional arguments: 'a' and 'b'
 
 # 0.2.0
