--- a/todo
+++ b/todo
@@ -54,7 +54,8 @@ TODOs:
 # 0.2.0
 TODOs:
     ☐ auto create logic argument description
-    ☐ accodion open close logic
+    ☐ accodion open close logic on sidebar
     ☐ open brawser in startup phase
     ☐ open brawser on same tab
     ☐ multiple test cases: tast_cases = []
+    ☐ put together same class on sidebar
