--- a/todo
+++ b/todo
@@ -58,10 +58,11 @@ TODOs:
     ☐ open brawser in startup phase
     ☐ open brawser on same tab
     ☐ multiple test cases: tast_cases = []
-<<<<<<< HEAD
     ☐ loading ui on running test
-    ☐ add documentation of how to create 
-    ☐ write qiita article in japanese 
-=======
+    ✔ add documentation of how to create @done(22-03-22 14:19)
+    ✔ write qiita article in japanese @done(22-03-22 14:19)
+    ☐ apply exception throw in execute example
+    ☐ not reload when change file
+    ☐ reload logics when reload brawser
     ☐ put together same class on sidebar
->>>>>>> develop
+    ☐ true false is not shown to output
