--- a/todo
+++ b/todo
@@ -57,6 +57,7 @@ TODOs:
     ✔ not reload when change file @done(22-03-23 12:46)
     ✔ true false is not shown to output @done(22-03-22 23:22)
     ✔ open brawser in startup phase @done(22-03-22 19:32)
+    ✔ cls to test_case @done(22-03-23 22:17)
     
 
 # 0.2.0
@@ -71,5 +72,6 @@ TODOs:
     ☐ accodion open close logic on sidebar
     ☐ update terminal ui using rich
     ☐ error occur when changed test function name 
+    ☐ add output wrapper function: ex. show pipeline.json()
     ✔ add documentation of how to create @done(22-03-22 14:19)
     ✔ write qiita article in japanese @done(22-03-22 14:19)
