--- a/todo
+++ b/todo
@@ -62,6 +62,7 @@ TODOs:
 
 # 0.2.0
 TODOs:
+    ☐ reconsider the architecture of the project
     ☐ auto create logic argument description
     ☐ open brawser on same tab
     ☐ multiple test cases: tast_cases = []
